@@ -116,6 +116,7 @@ void av_register_all(void)
     REGISTER_DEMUXER  (MPEGTSRAW, mpegtsraw);
     REGISTER_DEMUXER  (MPEGVIDEO, mpegvideo);
     REGISTER_MUXER    (MPJPEG, mpjpeg);
+    REGISTER_DEMUXER  (MSNWC_TCP, msnwc_tcp);
     REGISTER_DEMUXER  (MTV, mtv);
     REGISTER_DEMUXER  (MXF, mxf);
     REGISTER_DEMUXER  (NSV, nsv);
